--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
     <link rel="apple-touch-icon" sizes="512x512" href="%PUBLIC_URL%/images/512x512_App_Icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Meta -->
-    <title>chees Swap</title>
+    <title>Floki Swap</title>
     <meta
       name="description"
-      content="Flip CAKE, collect SYRUP and stake them with Chees Swap, the best decentralized exchange on Binance Smart Chain."
+      content="Flip CAKE, collect SYRUP and stake them with Floki Swap, the best decentralized exchange on Binance Smart Chain."
     />
     <meta name="theme-color" content="#000000" />
     <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
